--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
           <div class="row">
             <div class="col-md-6">
               <!--<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>-->
-                  <h3 class="cover-heading"> <a href="http://menus.tufts.edu/foodpro/shortmenu.asp?sName=Tufts+Dining&locationNum=11&locationName=Dewick+MacPhie+Dining+Center&naFlag=1">Dewick</a></h3>
+                  <h3 class="cover-heading"> Dewick</h3>
+                  <p class="lead"><a href="http://menus.tufts.edu/foodpro/shortmenu.asp?sName=Tufts+Dining&locationNum=11&locationName=Dewick+MacPhie+Dining+Center&naFlag=1">Full Menu </a></p>
                   <p class="lead"> Lunch </p>
                   <p id="DewickLunch"> </p>
                   <p class="lead"> Dinner </p>
                   <p id="DewickDinner"> </p>
               </div>
               <div class="col-md-6">
-                  <h3 class="cover-heading"><a href="http://menus.tufts.edu/foodpro/shortmenu.asp?sName=Tufts+Dining&locationNum=09&locationName=Carmichael+Dining+Center&naFlag=1">Carmichael</a></h3>
+                  <h3 class="cover-heading">Carmichael</h3>
+                  <p class="lead"><a href="http://menus.tufts.edu/foodpro/shortmenu.asp?sName=Tufts+Dining&locationNum=09&locationName=Carmichael+Dining+Center&naFlag=1">Full Menu </a></p>
                   <p class="lead"> Lunch </p>
                   <p id="CarmichaelLunch"> </p>
                   <p class="lead"> Dinner </p>
