--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                   <h3 class="cover-heading"> Dewick</h3>
                   <p class="lead"><a href="http://menus.tufts.edu/foodpro/shortmenu.asp?sName=Tufts+Dining&locationNum=11&locationName=Dewick+MacPhie+Dining+Center&naFlag=1">Full Menu </a></p>
                   <p class="lead"> Lunch </p>
+                  Brunch Menu <br>
                   <p id="DewickLunch"> </p>
                   <p class="lead"> Dinner </p>
                   <p id="DewickDinner"> </p>
@@ -78,6 +79,8 @@
                   <p class="lead"><a href="http://menus.tufts.edu/foodpro/shortmenu.asp?sName=Tufts+Dining&locationNum=09&locationName=Carmichael+Dining+Center&naFlag=1">Full Menu </a></p>
                   <p class="lead"> Lunch </p>
                   <p id="CarmichaelLunch"> </p>
+                  Kentucky Bourbon Glazed Wings <br>
+                  Brunch Menu <br> <br>
                   <p class="lead"> Dinner </p>
                   <p id="CarmichaelDinner"> </p>
               </div>
