Temporary Thanksgiving edit

--- a/index_lh.html
+++ b/index_lh.html
@@ -64,8 +64,8 @@
 
         <div class="inner cover">
           <div class="row">
-              <p class="lead">Happy Thanksgiving! See you when you're back.</p>
-              <!--<div class="col-md-6">
+            <div class="col-md-6">
+              <!--<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>-->
                   <h3 class="cover-heading"> Dewick</h3>
                   <p class="lead"><a href="http://menus.tufts.edu/foodpro/shortmenu.asp?sName=Tufts+Dining&locationNum=11&locationName=Dewick+MacPhie+Dining+Center&naFlag=1">Full Menu </a></p>
                   <p class="lead"> Lunch </p>
@@ -80,7 +80,7 @@
                   <p id="CarmichaelLunch"> </p>
                   <p class="lead"> Dinner </p>
                   <p id="CarmichaelDinner"> </p>
-              </div>-->
+              </div>
             </div>
           </div>
 
