Added meta description,keywords, and author for improved SEO

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Tufts University Menus for Dewick and Carmichael Dining Hall">
+    <meta name="author" content="Henry Zhou">
+    <meta name="keywords" content="Tufts University Menu Dining Dewick Carmichael">
     <link rel="icon" href="tuftsmenu.ico" type="image/x-icon">
 
     <title>Tufts Menu</title>
